--- a/src/SharpTLEX/SharpTLEX.csproj
+++ b/src/SharpTLEX/SharpTLEX.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
+      <PackageReference Include="Ardalis.SmartEnum.SystemTextJson" Version="2.1.0" />
     </ItemGroup>
 
 </Project>
