Added OneOf to project

--- a/src/SharpTLEX/SharpTLEX.csproj
+++ b/src/SharpTLEX/SharpTLEX.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
       <PackageReference Include="Ardalis.SmartEnum.SystemTextJson" Version="2.1.0" />
+      <PackageReference Include="OneOf" Version="3.0.216" />
     </ItemGroup>
 
 </Project>
